# extract-words

./: LICENSE  README.md  circle.yml  extract-words.cabal  stack.yaml
src/Data/Text/: Words.hs
test/: Spec.hs
