name:                extract-words
version:             0.1.0.0
synopsis:            Extract words from any given string
description:         Extract and normalize words from any given string, in any language
homepage:            https://github.com/thitp/extract-words#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Words
  build-depends:
                base >= 4.7 && < 5
              , containers >= 0.5
              , text
              , mecab
  default-language:    Haskell2010

test-suite extract-words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                base
              , extract-words
              , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thitp/extract-words
